Fix: layout and messages alignment

--- a/front-web/src/pages/Home/components/Login/styles.scss
+++ b/front-web/src/pages/Home/components/Login/styles.scss
@@ -28,8 +28,10 @@
 }
 
 .input-email {
-    display: flex;
+    display: block;
+    width: 100%;
     height: 50px;
+    margin-bottom: 1%;
 }
 
 .input-password-container {
@@ -38,10 +40,13 @@
   
     display: flex;
     align-items: center;
+
+    margin-bottom: 1%;
 }
 
 .input-password {    
-    display: flex;
+    display: block;
+    width: 100%;
     height: 50px;
 }
 
@@ -50,7 +55,13 @@
     color: #263238;
 }
 
-.input-invalid{
-    margin-left: 10px;
+.icon:focus,
+.icon:hover {
+    color: #263238!important;
+}
+
+.input-invalid {
+    margin-left: 2%;
     color: #FFF !important;
+    font-weight: bolder!important;
 }
